# Project-Empire

./: .dockerignore  .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  README.md  changelog  empire.py  ps-empire  pyproject.toml  pytest.ini
.github/: CONTRIBUTING.md  ci-and-release.md  cst-config-docker.yaml  docker-compose.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yaml
.github/actions/update-starkiller/: action.yml
.github/install_tests/: InstallTest.Dockerfile  cst-config-debian.yaml  cst-config-install-base.yaml  cst-config-ubuntu.yaml  docker-compose-install-tests.yml  run-all-cst.sh
.github/workflows/: cherry-pick-main.yml  dockerimage.yml  lint-and-test.yml  prerelease-sponsor-kali-merge-private.yml  release-private-start.yml  release-private-tag.yml  release-public-start.yml  release-public-tag.yml  release-sponsor-kali-start.yml  release-sponsor-kali-tag.yml
docs/: README.md  SUMMARY.md
docs/agents/: README.md
docs/agents/python/: README.md  extendedpackethandlerclass.md  mainagentclass.md  packethandlerclass.md  stageclass.md
docs/interfaces/starkiller/: agent_tasking.md
docs/module-development/: bof-modules.md  powershell-modules.md
docs/plugins/: README.md  getting-started.md  hooks-and-filters.md  plugin-development.md  plugin_tasking.md
docs/quickstart/configuration/: client.md  server.md
docs/quickstart/installation/: README.md
docs/restful-api/: README.md
empire/: arguments.py
empire/client/: client.py  config.yaml
empire/client/src/: EmpireCliConfig.py  EmpireCliState.py  MenuState.py  Shortcut.py  ShortcutHandler.py  bindings.py
empire/client/src/menus/: AdminMenu.py  AgentMenu.py  ChatMenu.py  CredentialMenu.py  EditListenerMenu.py  InteractMenu.py  ListenerMenu.py  MainMenu.py  Menu.py  PluginMenu.py  ProxyMenu.py  ShellMenu.py  SponsorsMenu.py  UseCredentialMenu.py  UseListenerMenu.py  UseMenu.py  UseModuleMenu.py  UsePluginMenu.py  UseStagerMenu.py
empire/client/src/utils/: autocomplete_util.py  cli_util.py  data_util.py  date_util.py  file_util.py  log_util.py  print_util.py  table_util.py  thread_util.py  vnc_util.py
empire/scripts/: sync_starkiller.py
empire/server/: config.yaml  server.py
empire/server/api/: api_router.py  app.py  jwt_auth.py  middleware.py
empire/server/api/v2/: shared_dependencies.py  shared_dto.py
empire/server/bypasses/: ETWBypass.yaml  LibermanBypass.yaml  MattifestationBypass.yaml  RastaMouseBypass.yaml  ScriptBlockLogBypass.yaml
empire/server/common/: agents.py  credentials.py  empire.py  encryption.py  helpers.py  listeners.py  packets.py  plugins.py  pylnk.py  socks.py  stagers.py  templating.py
empire/server/common/converter/: load_covenant.py
empire/server/common/malleable/: __init__.py  implementation.py  profile.py  transaction.py  transformation.py  utility.py
empire/server/core/: agent_file_service.py  agent_service.py  agent_task_service.py  bypass_service.py  config.py  credential_service.py  download_service.py  exceptions.py  hooks.py  hooks_internal.py  host_process_service.py  host_service.py  listener_service.py  listener_template_service.py  module_models.py  module_service.py  obfuscation_service.py  plugin_service.py  profile_service.py  stager_service.py  stager_template_service.py  tag_service.py  user_service.py
empire/server/core/db/: base.py  defaults.py  models.py
empire/server/data/agent/: agent.ps1  agent.py  ironpython_agent.py
empire/server/listeners/: dbx.py  http.py  http_com.py  http_foreign.py  http_hop.py  http_malleable.py  onedrive.py  port_forward_pivot.py  smb.py  template.py
empire/server/modules/: powershell_template.py  powershell_template.yaml  python_jobs_template.py  python_template.py  python_template.yaml
empire/server/modules/bof/: clipboard_window_inject.py  clipboard_window_inject.yaml  nanodump.py  nanodump.yaml  secinject.yaml  tgtdelegation.py  tgtdelegation.yaml
empire/server/modules/csharp/: Assembly.Covenant.py  Assembly.Covenant.yaml  AssemblyReflect.Covenant.py  AssemblyReflect.Covenant.yaml  Certify.Covenant.yaml  GhostPack.Covenant.yaml  Inject_BOF.Covenant.py  Inject_BOF.Covenant.yaml  Moriarty.Covenant.yaml  ProcessInjection.Covenant.py  ProcessInjection.Covenant.yaml  SharpSC.Covenant.yaml  SharpSploit.Enumeration.Covenant.yaml  SharpSploit.Execution.Covenant.yaml  SharpSploit.PrivilegeEscalation.Covenant.yaml  Sharpsploit.Credentials.Covenant.yaml  Shellcode.Covenant.py  Shellcode.Covenant.yaml  StratumMiner.Covenant.yaml  ThreadlessInject.Covenant.py  ThreadlessInject.Covenant.yaml  VNC.Covenant.yaml
empire/server/stagers/: CSharpPS.yaml  CSharpPy.yaml  Sharpire.yaml
empire/server/utils/: data_util.py  datetime_util.py  file_util.py  listener_util.py  log_util.py  math_util.py  module_util.py  option_util.py  string_util.py
empire/test/: conftest.py  test-upload-2.yaml  test_agent_api.py  test_agent_checkins_api.py  test_agent_file_api.py  test_agent_task_api.py  test_agent_task_service.py  test_agents.py  test_bypass_api.py  test_client_config.yaml  test_common_agents.py  test_config.py  test_credential_api.py  test_download_api.py  test_download_service.py  test_helpers.py  test_hooks.py  test_hooks_internal.py  test_host_api.py  test_host_process_api.py  test_listener_api.py  test_listener_generate_launcher.py  test_logs.py  test_meta_api.py  test_module_api.py  test_module_service.py  test_modules.py  test_obfuscation_api.py  test_openapi.py  test_option_util.py  test_plugin_api.py  test_plugin_service.py  test_plugin_task_api.py  test_profile_api.py  test_server_config.yaml  test_socket_hooks.py  test_stager_api.py  test_startup_loaders.py  test_string_util.py  test_tags_api.py  (+2 more)
setup/: cert.sh  checkout-latest-tag.sh  install.sh
(+613 files in other folders)
